# ChangeLog for xfce-extra/xfce4-genmon
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jun 2007; Christoph Mende <angelos@gentoo.org>
  +xfce4-genmon-9999.ebuild:
  Initial import
