@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD xfce4-genmon-9999.ebuild 349 RMD160 e14ecff1ddd8a14f5197b48a185d935b97f5dbba SHA1 b2782f34c073d9b5117005b8ec65949b1380ce45 SHA256 7115c9cae844a314854e0e2cef96bfb0d8f5671dc5c696f547530a95b94a481d
-MISC ChangeLog 223 RMD160 2033ad4313dadc80bb4941d39b7a9ec127c9f2ae SHA1 7d4487ad6292440f92b630dd958d81fa9f93b2ca SHA256 5c8fbffff8c9899bd24bc10569d351d78a163dacf7e74fd8472e5c64128990a7
+EBUILD xfce4-genmon-9999.ebuild 441 RMD160 c5807ce866bd4ea2c31c3c58cc2adf46d0036af7 SHA1 2ab3eb4adba46075064e43ff319800ac82455b18 SHA256 852df86aeaa601a99feb182c9d131e3a82f90d8e0ecf137e170f9ee0596decc0
+MISC ChangeLog 323 RMD160 09f62082299572e00309b7c584b7261ce25cd7c0 SHA1 5aec35f7c4494cbfd304fa86da4b78d01c0a1beb SHA256 858525496124555bf844ed079279bee53c822d381763978daffd97222daea53c
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkWJFMACgkQKhnDs22gwa+kQACfcKPvKuk2KqYjZbt0u/oi8by+
-4rsAn00Z5lnBiV09CF3C8ulgEArMFiyX
-=AK7I
+iEYEARECAAYFAkk+kG0ACgkQKhnDs22gwa9m+wCfS3434vmD5KLLwNiez1sG85Z1
+pqAAn0mXi6NzM8gB5NloaoiuuhJr+kNS
+=PJw2
 -----END PGP SIGNATURE-----
