@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-genmon
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  xfce4-genmon-9999.ebuild:
+  Fixed make check
 
   08 Jun 2007; Christoph Mende <angelos@gentoo.org>
   +xfce4-genmon-9999.ebuild:
